# tagfs

./: .gitignore  Benchmark.hs  CLI.hs  Config.hs  FSMain.hs  FuseOperations.hs  Main.hs  Makefile  Predicate.hs  README.md  ReEval.hs  Route.hs  RouteTest.hs  Stat.hs  TagFS.hs  TagSet.hs  mount  tagfs.cabal
Predicate/: Parser.hs
TagFS/: File.hs  Tag.hs
