name:                tagfs
version:             0.1.0.0
synopsis:            A tagging file system
license:             GPL-3
license-file:        LICENSE
author:              Richard Pilz
category:            System
build-type:          Simple
cabal-version:       >=1.8

executable tagfs
  main-is:              Main.hs
  other-modules:        Config
                        FuseOperations
                        Route
                        Stat
                        TagFS
                        TagFS.Tag
                        TagFS.File
                        TagSet
                        CLI
  build-depends:        base ==4.6.*,
                        text ==0.11.*,
                        HFuse ==0.2.*,
                        bytestring ==0.10.*,
                        containers ==0.5.*,
                        unix ==2.6.*,
                        filepath ==1.3.*,
                        mtl ==2.1.*,
                        transformers ==0.3.*,
                        free ==3.*,
                        directory ==1.2.*,
                        parsec,
                        optparse-applicative
  ghc-options:          -Wall -threaded -rtsopts
  extensions:           DoAndIfThenElse

executable benchmark
  main-is:              Benchmark.hs
  build-depends:        base ==4.6.*,
                        text ==0.11.*,
                        HFuse ==0.2.*,
                        bytestring ==0.10.*,
                        containers ==0.5.*,
                        unix ==2.6.*,
                        filepath ==1.3.*,
                        mtl ==2.1.*,
                        transformers ==0.3.*,
                        free ==3.*,
                        directory ==1.2.*,
                        parsec
  ghc-options:          -Wall -threaded -rtsopts
  extensions:           DoAndIfThenElse

-- vim: set ts=2 sts=2 sw=2 et:
