name:                tagfs
version:             0.1.0.0
synopsis:            A tagging file system
license:             GPL-3
license-file:        LICENSE
author:              Richard Pilz
category:            System
build-type:          Simple
cabal-version:       >=1.8

executable tagfs
  main-is:              Main.hs
  other-modules:        Config
                        FuseOperations
                        Route
                        Stat
                        TagFS
                        TagFS.Tag
                        TagFS.File
                        TagSet
                        CLI
  build-depends:        base,
                        text,
                        HFuse,
                        bytestring,
                        containers,
                        unix,
                        filepath,
                        mtl,
                        transformers,
                        free,
                        directory,
                        parsec,
                        optparse-applicative
  ghc-options:          -Wall -threaded
  extensions:           DoAndIfThenElse

executable benchmark
  main-is:              Benchmark.hs
  build-depends:        base,
                        text,
                        HFuse,
                        bytestring,
                        containers,
                        unix,
                        filepath,
                        mtl,
                        transformers,
                        free,
                        directory,
                        parsec
  ghc-options:          -Wall -threaded -rtsopts
  extensions:           DoAndIfThenElse

-- vim: set ts=2 sts=2 sw=2 et:
